--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,6 +38,13 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
+<strong><a href="http://trac.cyberduck.ch/milestone/4.0.3">Version 4.0.3</a></strong><br/>
+<ul>
+    <li>- [Feature] IPv6 support (Windows) (<a
+            href="http://trac.cyberduck.ch/ticket/5699">#5699</a>)
+    </li>
+</ul>
+
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.2">Version 4.0.2</a></strong><br/>
 <ul>
     <li>[Feature] SSL URL for files in Akamai CDN enabled containers (Cloud Files)</li>
