--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -40,7 +40,8 @@
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.3">Version 4.0.3</a></strong><br/>
 <ul>
-    <li>- [Feature] IPv6 support (Windows) (<a
+    <li>[Localize] Bulgarian Localization</li>
+    <li>[Feature] IPv6 support (Windows) (<a
             href="http://trac.cyberduck.ch/ticket/5699">#5699</a>)
     </li>
 </ul>
