--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -44,6 +44,15 @@
     <li>[Feature] IPv6 support (Windows) (<a
             href="http://trac.cyberduck.ch/ticket/5699">#5699</a>)
     </li>
+    <li>[Feature] Enable access logs for custom origin distributions (CloudFront)</li>
+    <li>[Feature] Choose target bucket for access logs (CloudFront)</li>
+    <li>[Feature] Choose target bucket for access logs (S3)</li>
+    <li>[Bugfix] Delete only trashes documents (Google Docs) (<a
+            href="http://trac.cyberduck.ch/ticket/5873">#5873</a>)
+    </li>
+    <li>[Bugfix] Wrong timestamp in transfer prompt (<a
+            href="http://trac.cyberduck.ch/ticket/5916">#5916</a>)
+    </li>
 </ul>
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.2">Version 4.0.2</a></strong><br/>
