--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,6 +38,11 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
+<strong><a href="http://trac.cyberduck.ch/milestone/4.1">Version 4.1</a></strong><br/>
+<ul>
+    <li>[Feature] Replaced WebDAV protocol implementation</li>
+</ul>
+
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.3">Version 4.0.3</a></strong><br/>
 <ul>
     <li>[Localize] Bulgarian Localization</li>
