--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -40,12 +40,9 @@
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.1">Version 4.1</a></strong><br/>
 <ul>
-    <li>[Feature] Replaced WebDAV protocol implementation</li>
-</ul>
-
-<strong><a href="http://trac.cyberduck.ch/milestone/4.0.3">Version 4.0.3</a></strong><br/>
-<ul>
     <li>[Localize] Bulgarian Localization</li>
+    <li>[Feature] Replaced WebDAV protocol implementation</li>
+    <li>[Feature] Set preferred default editor (Windows) (<a href="http://trac.cyberduck.ch/ticket/5729">#5729</a>)</li>
     <li>[Feature] IPv6 support (Windows) (<a
             href="http://trac.cyberduck.ch/ticket/5699">#5699</a>)
     </li>
