--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -55,6 +55,9 @@
     <li>[Bugfix] Wrong timestamp in transfer prompt (<a
             href="http://trac.cyberduck.ch/ticket/5916">#5916</a>)
     </li>
+    <li>[Bugfix] Uploading file to collection places it in root folder instead (Google Docs) (<a
+            href="http://trac.cyberduck.ch/ticket/5856">#5856</a>)
+    </li>
 </ul>
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.0.2">Version 4.0.2</a></strong><br/>
