--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -42,6 +42,9 @@
 <ul>
     <li>[Localize] Bulgarian Localization</li>
     <li>[Feature] Replaced WebDAV protocol implementation</li>
+    <li>[Feature] Sort bookmarks by nickname, hostname or protocol (<a
+            href="http://trac.cyberduck.ch/ticket/5925">#5925</a>)
+    </li>
     <li>[Feature] Set preferred default editor (Windows) (<a href="http://trac.cyberduck.ch/ticket/5729">#5729</a>)</li>
     <li>[Feature] IPv6 support (Windows) (<a
             href="http://trac.cyberduck.ch/ticket/5699">#5699</a>)
@@ -49,6 +52,9 @@
     <li>[Feature] Enable access logs for custom origin distributions (CloudFront)</li>
     <li>[Feature] Choose target bucket for access logs (CloudFront)</li>
     <li>[Feature] Choose target bucket for access logs (S3)</li>
+    <li>[Feature] CDN (Akamai) configuration (Cloudfiles UK) (<a href="http://trac.cyberduck.ch/ticket/5989">#5989</a>)
+    </li>
+    <li>[Feature] Filter bookmarks by comments (<a href="http://trac.cyberduck.ch/ticket/5926">#5926</a>)</li>
     <li>[Bugfix] Delete only trashes documents (Google Docs) (<a
             href="http://trac.cyberduck.ch/ticket/5873">#5873</a>)
     </li>
@@ -57,6 +63,18 @@
     </li>
     <li>[Bugfix] Uploading file to collection places it in root folder instead (Google Docs) (<a
             href="http://trac.cyberduck.ch/ticket/5856">#5856</a>)
+    </li>
+    <li>[Bugfix] Support for extended character sets (Windows) (<a href="http://trac.cyberduck.ch/ticket/6016">#6016</a>)
+    </li>
+    <li>[Bugfix] Limited to 10'000 containers (Cloudfiles) (<a href="http://trac.cyberduck.ch/ticket/6037">6037</a>)
+    </li>
+    <li>[Bugfix] SSL version number incompatibility (<a href="http://trac.cyberduck.ch/ticket/5061">#5061</a>)</li>
+    <li>[Bugfix] Donation key validation failure (10.5) (<a href="http://trac.cyberduck.ch/ticket/5846">#5846</a>)</li>
+    <li>[Bugfix] CDN URL for files only available after opening Info window (Cloudfiles) (<a
+            href="http://trac.cyberduck.ch/ticket/6040">#6040</a>)
+    </li>
+    <li>[Bugfix] Interoperability (FTP) (<a href="http://trac.cyberduck.ch/ticket/5866">#5866</a>, <a
+            href="http://trac.cyberduck.ch/ticket/5949">#5949</a>)
     </li>
 </ul>
 
