--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -52,6 +52,9 @@
     </li>
     <li>[Feature] Filter bookmarks by comments (<a href="http://trac.cyberduck.ch/ticket/5926">#5926</a>)</li>
     <li>[Feature] Upload arbitrary file types (Google Docs)</li>
+    <li>[Feature] Support trackpad gestures for navigation and selection (Mac) (<a
+            href="http://trac.cyberduck.ch/ticket/2793">#2793</a>)
+    </li>
     <li>[Bugfix] Delete only trashes documents (Google Docs) (<a
             href="http://trac.cyberduck.ch/ticket/5873">#5873</a>)
     </li>
