--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -74,6 +74,9 @@
     <li>[Bugfix] Interoperability (FTP) (<a href="http://trac.cyberduck.ch/ticket/5866">#5866</a>, <a
             href="http://trac.cyberduck.ch/ticket/5949">#5949</a>)
     </li>
+    <li>[Bugfix] Preserve modification dates for folders on upload (<a
+            href="http://trac.cyberduck.ch/ticket/6048">#6048</a>)
+    </li>
 </ul>
 
 <p>Release notes for previous versions can be found at <a
