--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,6 +38,19 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
+<strong><a href="http://trac.cyberduck.ch/milestone/4.1.1">Version 4.1.1</a></strong><br/>
+<ul>
+    <li>[Bugfix] Connection failure with email address as username (WebDAV) (<a
+            href="http://trac.cyberduck.ch/ticket/6066">#6066</a>)
+    </li>
+    <li>[Bugfix] Synchronisation comparison failures (<a
+            href="http://trac.cyberduck.ch/ticket/6074">#6074</a>)
+    </li>
+    <li>[Bugfix] Error listing folders (Openstack Swift) (<a
+            href="http://trac.cyberduck.ch/ticket/6089">#6089</a>)
+    </li>
+</ul>
+
 <strong><a href="http://trac.cyberduck.ch/milestone/4.1">Version 4.1</a></strong><br/>
 <ul>
     <li>[Localize] Bulgarian Localization</li>
