Recent changes. 4.1.1 is MAS only release.

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,8 +38,18 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
+<strong><a href="http://trac.cyberduck.ch/milestone/4.1.2">Version 4.1.2</a></strong><br/>
+<ul>
+    <li>[Feature] Rename files (Cloudfiles)</li>
+    <li>[Feature] Duplicate files (Cloudfiles)</li>
+    <li>[Bugfix] Select filename only without suffix in browser (<a
+            href="http://trac.cyberduck.ch/ticket/6158">#6158</a>)
+    </li>
+</ul>
+
 <strong><a href="http://trac.cyberduck.ch/milestone/4.1.1">Version 4.1.1</a></strong><br/>
 <ul>
+    <li>[Feature] Importer for WinSCP bookmarks (Windows)</li>
     <li>[Bugfix] Connection failure with email address as username (WebDAV) (<a
             href="http://trac.cyberduck.ch/ticket/6066">#6066</a>)
     </li>
