--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,6 +38,19 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
+<strong><a href="http://trac.cyberduck.ch/milestone/4.1.3">Version 4.1.3</a></strong><br/>
+<ul>
+    <li>[Bugfix] Freeze after file transfer is complete (<a
+            href="http://trac.cyberduck.ch/ticket/6183">#6183</a>)
+    </li>
+    <li>[Bugfix] Connection failure to Eucalyptus Cloud installation (S3) (<a
+            href="http://trac.cyberduck.ch/ticket/6206">#6206</a>)
+    </li>
+    <li>[Feature] Support streaming URLs (Cloudfiles)</li>
+    <li>[Feature] Option to set ACLs for Google Apps Domain (Google Storage)</li>
+    <li>[Feature] Option to set ACLs for Google Group Email Address (Google Storage)</li>
+</ul>
+
 <strong><a href="http://trac.cyberduck.ch/milestone/4.1.2">Version 4.1.2</a></strong><br/>
 <ul>
     <li>[Feature] Rename files (Cloudfiles)</li>
