--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -49,6 +49,10 @@
     <li>[Feature] Support streaming URLs (Cloudfiles)</li>
     <li>[Feature] Option to set ACLs for Google Apps Domain (Google Storage)</li>
     <li>[Feature] Option to set ACLs for Google Group Email Address (Google Storage)</li>
+    <li>[Feature] Allow setting non-metadata headers (Cloudfiles, Openstack Swift) (<a
+            href="http://trac.cyberduck.ch/ticket/6191">#6191</a>, <a
+            href="http://trac.cyberduck.ch/ticket/6239">#6239</a>)
+    </li>
 </ul>
 
 <strong><a href="http://trac.cyberduck.ch/milestone/4.1.2">Version 4.1.2</a></strong><br/>
