--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -46,7 +46,7 @@
     <li>[Bugfix] Connection failure to Eucalyptus Cloud installation (S3) (<a
             href="http://trac.cyberduck.ch/ticket/6206">#6206</a>)
     </li>
-    <li>[Feature] Support streaming URLs (Cloudfiles)</li>
+    <li>[Feature] Copy streaming URLs (Cloudfiles)</li>
     <li>[Feature] Option to set ACLs for Google Apps Domain (Google Storage)</li>
     <li>[Feature] Option to set ACLs for Google Group Email Address (Google Storage)</li>
     <li>[Feature] Allow setting non-metadata headers (Cloudfiles, Openstack Swift) (<a
