--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -38,7 +38,16 @@
     <strong>Note</strong>: <strong>OS X 10.5 (Leopard)</strong> or later is required.
 </p>
 
-<strong><a href="http://trac.cyberduck.ch/milestone/4.1.3">Version 4.1.3</a></strong><br/>
+<p>
+    <a href="http://trac.cyberduck.ch/milestone/4.1.4"><strong>Version 4.1.4</strong></a>
+</p>
+<ul>
+    <li>[Feature] Support server side encryption (S3)</li>
+</ul>
+
+<p>
+    <a href="http://trac.cyberduck.ch/milestone/4.1.3"><strong>Version 4.1.3</strong></a>
+</p>
 <ul>
     <li>[Bugfix] Freeze after file transfer is complete (<a
             href="http://trac.cyberduck.ch/ticket/6183">#6183</a>)
@@ -55,7 +64,9 @@
     </li>
 </ul>
 
-<strong><a href="http://trac.cyberduck.ch/milestone/4.1.2">Version 4.1.2</a></strong><br/>
+<p>
+    <a href="http://trac.cyberduck.ch/milestone/4.1.2"><strong>Version 4.1.2</strong></a>
+</p>
 <ul>
     <li>[Feature] Rename files (Cloudfiles)</li>
     <li>[Feature] Duplicate files (Cloudfiles)</li>
@@ -64,7 +75,8 @@
     </li>
 </ul>
 
-<strong><a href="http://trac.cyberduck.ch/milestone/4.1.1">Version 4.1.1</a></strong><br/>
+<p>
+    <a href="http://trac.cyberduck.ch/milestone/4.1.1"><strong>Version 4.1.1</strong></a>
 <ul>
     <li>[Feature] Importer for WinSCP bookmarks (Windows)</li>
     <li>[Bugfix] Connection failure with email address as username (WebDAV) (<a
@@ -78,7 +90,9 @@
     </li>
 </ul>
 
-<strong><a href="http://trac.cyberduck.ch/milestone/4.1">Version 4.1</a></strong><br/>
+<p>
+    <a href="http://trac.cyberduck.ch/milestone/4.1"><strong>Version 4.1</strong></a>
+</p>
 <ul>
     <li>[Localize] Bulgarian Localization</li>
     <li>[Feature] Replaced WebDAV protocol implementation</li>
