--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -43,6 +43,8 @@
 </p>
 <ul>
     <li>[Feature] Support server side encryption (S3)</li>
+    <li>[Feature] Configure access logs for buckets (Google Cloud Storage)</li>
+    <li>[Bugfix] Performance improvement preparing files for download</li>
 </ul>
 
 <p>
