--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -44,6 +44,7 @@
 <ul>
     <li>[Feature] Support server side encryption (S3)</li>
     <li>[Feature] Configure access logs for buckets (Google Cloud Storage)</li>
+    <li>[Feature] Interoperability with OpenSSH to read private key from keychain.</li>
     <li>[Bugfix] Performance improvement preparing files for download</li>
 </ul>
 
