Add ETag to path attributes.

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -46,6 +46,7 @@
     <li>[Feature] Configure access logs for buckets (Google Cloud Storage)</li>
     <li>[Feature] Interoperability with OpenSSH to read private key from keychain.</li>
     <li>[Bugfix] Performance improvement preparing files for download</li>
+    <li>[Bugfix] Deleting files (Google Docs)</li>
 </ul>
 
 <p>
