--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -45,8 +45,19 @@
     <li>[Feature] Support server side encryption (S3)</li>
     <li>[Feature] Configure access logs for buckets (Google Cloud Storage)</li>
     <li>[Feature] Interoperability with OpenSSH to read private key from keychain.</li>
+    <li>[Feature] Connect to multiple projects (Google Cloud Storage) (<a
+            href="http://trac.cyberduck.ch/ticket/5955">#5955</a>)
+    </li>
+    <li>[Feature] Support OAuth 2.0 Authentication (Google Cloud Storage) (<a
+            href="http://trac.cyberduck.ch/ticket/5955">#5955</a>)
+    </li>
     <li>[Bugfix] Performance improvement preparing files for download</li>
-    <li>[Bugfix] Deleting files (Google Docs)</li>
+    <li>[Bugfix] ETag mismatch deleting files (Google Docs) (<a
+            href="http://trac.cyberduck.ch/ticket/6204">#6204</a>)
+    </li>
+    <li>[Bugfix] Creating new file (WebDAV) (<a
+            href="http://trac.cyberduck.ch/ticket/6341">#6341</a>)
+    </li>
 </ul>
 
 <p>
