--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -51,6 +51,7 @@
     <li>[Feature] Support OAuth 2.0 Authentication (Google Cloud Storage) (<a
             href="http://trac.cyberduck.ch/ticket/5955">#5955</a>)
     </li>
+    <li>[Feature] Support US West (Oregon) location (S3)</li>
     <li>[Bugfix] Performance improvement preparing files for download</li>
     <li>[Bugfix] ETag mismatch deleting files (Google Docs) (<a
             href="http://trac.cyberduck.ch/ticket/6204">#6204</a>)
