--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -52,12 +52,18 @@
             href="http://trac.cyberduck.ch/ticket/5955">#5955</a>)
     </li>
     <li>[Feature] Support US West (Oregon) location (S3)</li>
+    <li>[Feature] Try public key authentication login with default keys from OpenSSH (SFTP) (<a
+            href="http://trac.cyberduck.ch/ticket/3982">#3982</a>)
+    </li>
     <li>[Bugfix] Performance improvement preparing files for download</li>
     <li>[Bugfix] ETag mismatch deleting files (Google Docs) (<a
             href="http://trac.cyberduck.ch/ticket/6204">#6204</a>)
     </li>
     <li>[Bugfix] Creating new file (WebDAV) (<a
             href="http://trac.cyberduck.ch/ticket/6341">#6341</a>)
+    </li>
+    <li>[Bugfix] No error message when SFTP subsystem is disabled (SFTP) (<a
+            href="http://trac.cyberduck.ch/ticket/5902">#5902</a>)
     </li>
 </ul>
 
