--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -42,6 +42,7 @@
     <a href="http://trac.cyberduck.ch/milestone/4.1.4"><strong>Version 4.1.4</strong></a>
 </p>
 <ul>
+    <li>[Feature] Drag files between browser windows to copy files from server to server</li>
     <li>[Feature] Support server side encryption (S3)</li>
     <li>[Feature] Configure access logs for buckets (Google Cloud Storage)</li>
     <li>[Feature] Interoperability with OpenSSH to read private key from keychain.</li>
