Former-commit-id: ed8ef70a904ffe3e0063f8ab17a6928b72eab0b0

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -39,6 +39,13 @@
 </p>
 
 <p>
+    <a href="http://trac.cyberduck.ch/milestone/4.2.1"><strong>Version 4.2.1</strong></a>
+</p>
+<ul>
+    <li>- [Bugfix] Edited files not uploaded (<a href="http://trac.cyberduck.ch/ticket/6399">#6399</a>)</li>
+</ul>
+
+<p>
     <a href="http://trac.cyberduck.ch/milestone/4.2"><strong>Version 4.2</strong></a>
 </p>
 <ul>
