--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -39,10 +39,22 @@
 </p>
 
 <p>
+    <a href="http://trac.cyberduck.ch/milestone/4.2.2"><strong>Version 4.2.2</strong></a>
+</p>
+<ul>
+    <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
+    <li>[Feature] Multi-Object Delete (S3)</li>
+</ul>
+
+<p>
     <a href="http://trac.cyberduck.ch/milestone/4.2.1"><strong>Version 4.2.1</strong></a>
 </p>
 <ul>
-    <li>- [Bugfix] Edited files not uploaded (<a href="http://trac.cyberduck.ch/ticket/6399">#6399</a>)</li>
+    <li>[Bugfix] Edited files not uploaded (<a href="http://trac.cyberduck.ch/ticket/6399">#6399</a>)</li>
+    <li>[Bugfix] Content-Type not set to proper MIME type of file on upload (WebDAV) (<a
+            href="http://trac.cyberduck.ch/ticket/6433">#6433</a>)
+    </li>
+    <li>[Bugfix] Transfer status not saved (<a href="http://trac.cyberduck.ch/ticket/6430">#6430</a>)</li>
 </ul>
 
 <p>
