--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -42,6 +42,7 @@
     <a href="http://trac.cyberduck.ch/milestone/4.2.2"><strong>Version 4.2.2</strong></a>
 </p>
 <ul>
+    <li>[Localize] Arabic Localization</li>
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
 </ul>
