Former-commit-id: 194ba5599f6169432098cc76d68cddc05a17d051

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -45,6 +45,7 @@
     <li>[Localize] Arabic Localization</li>
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
+    <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
 </ul>
 
 <p>
