--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -46,6 +46,9 @@
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
     <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
+    <li>[Feature] Interoperability with Lunacloud Storage (S3)</li>
+    <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
+    <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
 </ul>
 
 <p>
