--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -47,6 +47,7 @@
     <li>[Feature] Multi-Object Delete (S3)</li>
     <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
     <li>[Feature] Interoperability with Lunacloud Storage (S3)</li>
+    <li>[Feature] Website Configuration (Google Storage)</li>
     <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
     <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
 </ul>
