Former-commit-id: 33eac10e1c93516d0fbc60ed8d1da3b484fb58fa

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -50,6 +50,7 @@
     <li>[Feature] Website Configuration (Google Storage)</li>
     <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
     <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
+    <li>[Bugfix] Interoperability with latest API (CloudFront)</li>
 </ul>
 
 <p>
