Former-commit-id: 23d30ea917ec0e162d34e84490ba8e8a46d2c026

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -48,6 +48,7 @@
     <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
     <li>[Feature] Interoperability with Lunacloud Storage (S3)</li>
     <li>[Feature] Website Configuration (Google Storage)</li>
+    <li>[Feature] Retina resolution support (<a href="http://trac.cyberduck.ch/ticket/6760">#6760</a>)</li>
     <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
     <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
     <li>[Bugfix] Interoperability with latest API (CloudFront)</li>
