--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -44,6 +44,7 @@
 <ul>
     <li>[Localize] Arabic Localization</li>
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
+    <li>[Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
     <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
     <li>[Feature] Interoperability with Lunacloud Storage (S3)</li>
