Former-commit-id: d69ac0b8631edb40e200a08cea33387da448f62d

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -53,6 +53,8 @@
     <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
     <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
     <li>[Bugfix] Interoperability with latest API (CloudFront)</li>
+    <li>[Bugfix] Crash in Rendezvous resolver (<a href="http://trac.cyberduck.ch/ticket/6495">#6814</a>)</li>
+    <li>[Bugfix] Java optional install required (App Store) (<a href="http://trac.cyberduck.ch/ticket/6090">#6090</a>)</li>
 </ul>
 
 <p>
