Former-commit-id: 9c77d243757eea245689452aa8f173a99ddac5f8

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -55,6 +55,7 @@
     <li>[Bugfix] Interoperability with latest API (CloudFront)</li>
     <li>[Bugfix] Crash in Rendezvous resolver (<a href="http://trac.cyberduck.ch/ticket/6495">#6814</a>)</li>
     <li>[Bugfix] Java optional install required (App Store) (<a href="http://trac.cyberduck.ch/ticket/6090">#6090</a>)</li>
+    <li>[Bugfix] Changes in editor not uploaded when choosing save on close (<a href="http://trac.cyberduck.ch/ticket/6590">#6590</a>)</li>
 </ul>
 
 <p>
