Former-commit-id: 13573ae218da31ff5f0158584fa51e2b3a34de9d

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -43,19 +43,23 @@
 </p>
 <ul>
     <li>[Localize] Arabic Localization</li>
+    <li>[Feature] Retina resolution support (<a href="http://trac.cyberduck.ch/ticket/6760">#6760</a>)</li>
+    <li>[Feature] Notification center support (10.8) (<a href="http://trac.cyberduck.ch/ticket/6792">#6792</a>)</li>
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
     <li>[Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
     <li>[Feature] Interoperability with HP Cloud (Openstack)</li>
     <li>[Feature] Interoperability with Lunacloud Storage (S3)</li>
     <li>[Feature] Website Configuration (Google Storage)</li>
-    <li>[Feature] Retina resolution support (<a href="http://trac.cyberduck.ch/ticket/6760">#6760</a>)</li>
     <li>[Bugfix] Copy folder from server to server (<a href="http://trac.cyberduck.ch/ticket/6440">#6440</a>)</li>
     <li>[Bugfix] Duplicate folder (<a href="http://trac.cyberduck.ch/ticket/6495">#6495</a>)</li>
     <li>[Bugfix] Interoperability with latest API (CloudFront)</li>
     <li>[Bugfix] Crash in Rendezvous resolver (<a href="http://trac.cyberduck.ch/ticket/6495">#6814</a>)</li>
-    <li>[Bugfix] Java optional install required (App Store) (<a href="http://trac.cyberduck.ch/ticket/6090">#6090</a>)</li>
-    <li>[Bugfix] Changes in editor not uploaded when choosing save on close (<a href="http://trac.cyberduck.ch/ticket/6590">#6590</a>)</li>
+    <li>[Bugfix] Java optional install required (App Store) (<a href="http://trac.cyberduck.ch/ticket/6090">#6090</a>)
+    </li>
+    <li>[Bugfix] Changes in editor not uploaded when choosing save on close (<a
+            href="http://trac.cyberduck.ch/ticket/6590">#6590</a>)
+    </li>
 </ul>
 
 <p>
