Former-commit-id: 5f4e7f8f59221e58ed09a53082b0dec14649bacd

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -60,6 +60,8 @@
     <li>[Bugfix] Changes in editor not uploaded when choosing save on close (<a
             href="http://trac.cyberduck.ch/ticket/6590">#6590</a>)
     </li>
+    <li>[Bugfix] Dropped support Azure Blob Storage connections (Azure)</li>
+    <li>[Bugfix] Dropped support Dropbox connections (Dropbox)</li>
 </ul>
 
 <p>
