Former-commit-id: 7e8c96de57dcd58040b7431b10c88c5577d86e49

--- a/www/update/changelog.html
+++ b/www/update/changelog.html
@@ -45,6 +45,7 @@
     <li>[Localize] Arabic Localization</li>
     <li>[Feature] Retina resolution support (<a href="http://trac.cyberduck.ch/ticket/6760">#6760</a>)</li>
     <li>[Feature] Notification center support (10.8) (<a href="http://trac.cyberduck.ch/ticket/6792">#6792</a>)</li>
+    <li>[Feature] Gatekeeper support (10.8) (<a href="http://trac.cyberduck.ch/ticket/6888">#6888</a>)</li>
     <li>[Feature] Bucket location in South America (Sao Paulo) Region (S3)</li>
     <li>[Feature] One click setup for analytics with Qloudstat (S3, CloudFront, Cloudfiles, Google Storage)</li>
     <li>[Feature] Multi-Object Delete (S3)</li>
